--- a/serenity.properties
+++ b/serenity.properties
@@ -7,5 +7,5 @@ serenity.browser.maximized = true
 serenity.take.screenshots=AFTER_EACH_STEP
 serenity.verbose.steps=FALSE
 serenity.report.encoding=UTF8
-feature.file.encoding =UTF8
-serenity.test.root=net.thucydides.showcase.cucumber.junit
+#feature.file.encoding =UTF8
+#serenity.test.root=net.thucydides.showcase.cucumber.junit
